<resources>
    <string name="app_name">TrucoScore</string>
    <string name="score_us">Nós</string>
    <string name="score_them">Eles</string>
    <string name="score_1">+1</string>
    <string name="score_3">+3</string>
    <string name="score_6">+6</string>
    <string name="score_9">+9</string>
    <string name="reset">Reset</string>
    <string name="left"><![CDATA[<]]></string>
    <string name="right"><![CDATA[>]]></string>

    <string name="initial_value">0</string>
</resources>
